# bnk-wizard

./: .gitignore  README.md  env  pyproject.toml
data/: 113946849.wem  new_sound.wem
modules/: audioutils.py  bnkwizard.py  chunks.py  iostream.py  objects.py  sections.py  ui.py  utils.py  wemarray.py  wemlist.py
modules/chunks/: chunks.py
src/: bnkwizard.py  iostream.py  main.py
tests/: test_bnkwizard.py  test_iostream.py
venv-bnk/: pyvenv.cfg
venv-bnk/Scripts/: activate  activate.bat
